[NTDLL_APITEST] Implement test for RtlCaptureContext (x64 only so far)

--- a/modules/rostests/apitests/ntdll/CMakeLists.txt
+++ b/modules/rostests/apitests/ntdll/CMakeLists.txt
@@ -35,6 +35,7 @@ list(APPEND SOURCE
 list(APPEND RTL_SOURCE
     RtlAllocateHeap.c
     RtlBitmap.c
+    RtlCaptureContext.c
     RtlCopyMappedMemory.c
     RtlDeleteAce.c
     RtlDetermineDosPathNameType.c
@@ -68,6 +69,9 @@ list(APPEND RTL_SOURCE
 
 if(ARCH STREQUAL "i386")
     add_asm_files(ntdll_apitest_asm i386/NtContinue.S)
+    add_asm_files(ntdll_apitest_asm i386/RtlCaptureContext.S)
+elseif(ARCH STREQUAL "amd64")
+    add_asm_files(ntdll_apitest_asm amd64/RtlCaptureContext.S)
 endif()
 
 add_rc_deps(testdata.rc ${CMAKE_CURRENT_BINARY_DIR}/load_notifications/load_notifications.dll)
