HACK: [REACTOS] Disable some modules

--- a/modules/rostests/apitests/CMakeLists.txt
+++ b/modules/rostests/apitests/CMakeLists.txt
@@ -12,14 +12,14 @@ add_subdirectory(crt)
 add_subdirectory(dbghelp)
 add_subdirectory(dciman32)
 add_subdirectory(dnsapi)
-add_subdirectory(gdi32)
+#add_subdirectory(gdi32)
 add_subdirectory(gditools)
 add_subdirectory(iphlpapi)
 if(NOT ARCH STREQUAL "amd64")
     add_subdirectory(kernel32)
 endif()
 add_subdirectory(localspl)
-add_subdirectory(msgina)
+#add_subdirectory(msgina)
 add_subdirectory(mspatcha)
 add_subdirectory(msvcrt)
 add_subdirectory(netapi32)
@@ -31,11 +31,11 @@ add_subdirectory(powrprof)
 add_subdirectory(sdk)
 add_subdirectory(setupapi)
 add_subdirectory(sfc)
-add_subdirectory(shell32)
+#add_subdirectory(shell32)
 add_subdirectory(shlwapi)
-add_subdirectory(spoolss)
+#add_subdirectory(spoolss)
 add_subdirectory(psapi)
-add_subdirectory(user32)
+#add_subdirectory(user32)
 add_subdirectory(user32_dynamic)
 add_subdirectory(userenv)
 add_subdirectory(uxtheme)
