--- a/modules/rostests/winetests/CMakeLists.txt
+++ b/modules/rostests/winetests/CMakeLists.txt
@@ -1,6 +1,10 @@
 
 add_definitions(-D__ROS_LONG64__)
 
+if(ARCH STREQUAL "amd64")
+    add_definitions(/wd4312)
+endif()
+
 add_subdirectory(advapi32)
 add_subdirectory(advpack)
 add_subdirectory(amstream)
@@ -65,7 +69,7 @@ add_subdirectory(netcfgx)
 add_subdirectory(ntdll)
 add_subdirectory(ntdsapi)
 add_subdirectory(odbccp32)
-add_subdirectory(ole32)
+#add_subdirectory(ole32)
 add_subdirectory(oleacc)
 add_subdirectory(oleaut32)
 add_subdirectory(oledlg)
@@ -92,7 +96,7 @@ add_subdirectory(serialui)
 add_subdirectory(services)
 add_subdirectory(setupapi)
 add_subdirectory(shdocvw)
-add_subdirectory(shell32)
+#add_subdirectory(shell32)
 add_subdirectory(shlwapi)
 add_subdirectory(snmpapi)
 add_subdirectory(spoolss)
