--- a/drivers/filesystems/CMakeLists.txt
+++ b/drivers/filesystems/CMakeLists.txt
@@ -11,4 +11,4 @@ add_subdirectory(nfs)
 add_subdirectory(npfs)
 add_subdirectory(ntfs)
 add_subdirectory(reiserfs)
-add_subdirectory(udfs)
+# add_subdirectory(udfs)
