--- a/modules/rosapps/applications/net/CMakeLists.txt
+++ b/modules/rosapps/applications/net/CMakeLists.txt
@@ -2,4 +2,4 @@ add_subdirectory(ncftp)
 add_subdirectory(netreg)
 add_subdirectory(niclist)
 add_subdirectory(roshttpd)
-add_subdirectory(tditest)
+#add_subdirectory(tditest)
