HACK: Disable PCHs

--- a/drivers/base/kdcom/CMakeLists.txt
+++ b/drivers/base/kdcom/CMakeLists.txt
@@ -17,5 +17,5 @@ set_subsystem(kdcom native)
 add_importlibs(kdcom ntoskrnl hal)
 target_link_libraries(kdcom cportlib)
 add_dependencies(kdcom psdk bugcodes)
-add_pch(kdcom kddll.h SOURCE)
+#add_pch(kdcom kddll.h SOURCE)
 add_cd_file(TARGET kdcom DESTINATION reactos/system32 NO_CAB FOR all)
