--- a/dll/np/nfs/CMakeLists.txt
+++ b/dll/np/nfs/CMakeLists.txt
@@ -19,5 +19,5 @@ add_library(nfs41_np SHARED
 set_module_type(nfs41_np win32dll UNICODE)
 target_link_libraries(nfs41_np ${PSEH_LIB})
 add_importlibs(nfs41_np msvcrt kernel32)
-add_pch(nfs41_np precomp.h SOURCE)
+#add_pch(nfs41_np precomp.h SOURCE)
 add_cd_file(TARGET nfs41_np DESTINATION reactos/system32 FOR all)
